[gd_scene load_steps=2 format=3 uid="uid://cptdcodjcgb33"]

[ext_resource type="Script" uid="uid://bocdttpch8dnm" path="res://scripts/hand.gd" id="1_m1v21"]

[node name="Hand" type="Node2D"]
script = ExtResource("1_m1v21")

[node name="MaskPoint1" type="Node2D" parent="."]
position = Vector2(-87, -42)
rotation = -0.2617994

[node name="MaskPoint2" type="Node2D" parent="."]
position = Vector2(0, -50)

[node name="MaskPoint3" type="Node2D" parent="."]
position = Vector2(87, -42)
rotation = 0.2617994
